--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,15 @@
 @import "tailwindcss";
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray; 
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black; 
+  border-radius: 50px;
+}
